# Herif-Bot

./: .14ni2b8ws8uzf453456823~  .2kqo8a00rdigb2762093012~  .4irmrhkg3a3486507206~  .dockerignore  .gitignore  Bot.py  Bot2.py  Commands.py  Constants.py  Costom1.txt  Costom2.txt  Discord.py  Discord2.py  Dockerfile  GPT.py  GUI.py  JoinVC.py  README.md  Read.py  Replit.txt  Server_Check.py  Tasks.py  Token.py  Twin Towers.py  YouTube.lnk  Youtube.py  birthdays.json  client.py  compose.yaml  demo_sanitization.py  gpt-id.txt  logging_system.py  main.py  prod_compose.yml  prod_run.sh  pylintrc  pyproject.toml  pytest.ini  requirements.txt  requirments.txt  (+9 more)
.github/workflows/: bandit.yml  create_docker_image.yaml  pylint.yml  run_tests.yaml  tests.yml
Tests/: test_download_sanitization.py  test_helper_functions.py
Tests/database_system/: conftest.py  test_birthday_json.py  test_birthday_sql.py  test_customization_json.py  test_customization_sql.py  test_server_config_json.py  test_server_config_sql.py
Tests/video_system/: download_tester.py
jsons/: README.md  responses.json
src/: GPT.py  Messages.py  Read.py  Tasks.py  Youtube.py  birthday_helpers.py  birthday_system.py  client.py  command_controller.py  commands.py  download_commands.py  downloader.py  downloading_system.py  file_handeler.py  helper_functions.py  instagram.py  logging_system.py  member_update_handlers.py  message_handeler.py  other.py  response_system.py  token_system.py  twitter.py  views.py  voice_commands.py  voice_helpers.py
src/Helpers/: birthday_helpers.py  gpt_helpers.py  helper_functions.py  logging_system.py  twitter_helpers.py
src/commands/: ai.py  birthday.py  command_group.py  customization.py  debug.py  download.py  messages.py  voice.py
(+54 files in other folders)
