[project]
name = "herif-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "discord-py>=2.2.3",
    "google-cloud-logging>=3.6",
    "yt-dlp>=2025.8.27",
    "openai>=1.43.1",
    "pynacl>=1.5.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.3",
    "instaloader>=4.12",
    "async-lru>=2.0.5",
    "axiom-py>=0.9.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
]
